Resolve "Input Select Menu dark mode"

--- a/static/css/src/_m-ip-select.scss
+++ b/static/css/src/_m-ip-select.scss
@@ -39,6 +39,8 @@ Styleguide SelectMenu.UIStates
     --overlay-zindex: 1;
 
     --opt-border--hover: var(--light-blue);
+    --opt-bg--active: #e7f6ff;
+    --options-bg: #f4f4f4;
 
     position: relative;
 
@@ -69,11 +71,12 @@ Styleguide SelectMenu.UIStates
         width: -webkit-fill-available;
         border: 2px solid var(--ip-border);
         padding: 10px 15px;
+        background-color: var(--ip-bg);
         border-radius: 6px;
         outline: none;
 
         &:hover {
-            background-color: #fff;
+            background-color: var(--body-bg);
         }
 
         &::after {
@@ -119,7 +122,7 @@ Styleguide SelectMenu.UIStates
         margin: 0;
         border: 2px solid var(--ip-border);
         padding: 4px;
-        background-color: #f4f4f4;
+        background-color: var(--options-bg);
         list-style: none;
         border-radius: 6px;
         box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
@@ -144,7 +147,7 @@ Styleguide SelectMenu.UIStates
     &__opt-item {
         border: 2px solid transparent;
         padding: 3px 6px;
-        background-color: #fff;
+        background-color: var(--body-bg);
         border-radius: 4px;
         user-select: none;
 
@@ -154,7 +157,12 @@ Styleguide SelectMenu.UIStates
 
         &:active {
             border: 2px solid var(--opt-border--hover);
-            background-color: #e7f6ff;
+            background-color: var(--opt-bg--active);
         }
+    }
+
+    @media (prefers-color-scheme: dark) {
+        --options-bg: #333333;
+        --opt-bg--active: #00486a;
     }
 }
